testeando corregidos automaticos ultimo dia del mes

--- a/test/dte_testing.ipynb
+++ b/test/dte_testing.ipynb
@@ -14,7 +14,9 @@
     "import io\n",
     "from datetime import datetime, timedelta\n",
     "import sqlalchemy\n",
-    "import urllib"
+    "import urllib\n",
+    "import warnings\n",
+    "warnings."
    ]
   },
   {
