--- a/test/dte_testing.ipynb
+++ b/test/dte_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +16,12 @@
     "import sqlalchemy\n",
     "import urllib\n",
     "import warnings\n",
-    "warnings."
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,11 @@
     "\n",
     "URL = f\"https://api.cammesa.com/pub-svc/public/\"\n",
     "\n",
+    "method_id = {\n",
+    "\n",
+    "    \"findDocumentosByNemoRango?\": \n",
+    "\n",
+    "}\n",
     "method_id = \"findDocumentosByNemoRango?\" #ID\n",
     "method_zip = \"findAllAttachmentZipByNemoId?\"\n",
     "\n",
@@ -38,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,13 +51,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,45 +79,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['DTE2404.zip', 'FONINVEMEM2404.txt']\n",
-      "DTE2404.zip\n"
+     "ename": "FileExistsError",
+     "evalue": "[WinError 183] No se puede crear un archivo que ya existe: '../.zips/DTE2404/DTE2404.zip'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m os\u001b[38;5;241m.\u001b[39mmkdir(path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../.zips/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDTE_fecha\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     13\u001b[0m z\u001b[38;5;241m.\u001b[39mextractall(path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../.zips/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDTE_fecha\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDTE_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;66;03m#Extraer todos los archivos del primer .zip\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmkdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m../.zips/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mDTE_fecha\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mDTE_name\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m# Ruta al archivo .zip\u001b[39;00m\n\u001b[0;32m     19\u001b[0m segundo_zip_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../.zips/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDTE_fecha\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDTE_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[1;31mFileExistsError\u001b[0m: [WinError 183] No se puede crear un archivo que ya existe: '../.zips/DTE2404/DTE2404.zip'"
      ]
     }
    ],
    "source": [
-    "zip_path = \".zips\"\n",
-    "mdb_path = \".zips/.mdb\"\n",
-    "\n",
     "try:\n",
     "    with requests.get(url_zip) as r:\n",
     "\n",
     "        if r.status_code == 200:\n",
     "            with zipfile.ZipFile(io.BytesIO(r.content)) as primer_zip:\n",
     "                z = primer_zip\n",
-    "                print(z.namelist())\n",
-    "                print(z.namelist()[0])\n",
+    "                \n",
+    "                files_inside = z.namelist()\n",
+    "                DTE_name = z.namelist()[0]\n",
     "                DTE_fecha = z.namelist()[0][:7]\n",
+    "                                \n",
+    "                os.mkdir(path=f\"../.zips/{DTE_fecha}\")\n",
+    "                z.extractall(path=f\"../.zips/{DTE_fecha}\") #Extraer todos los archivos del primer .zip\n",
     "\n",
-    "                # print(DTE_fecha)\n",
+    "                os.mkdir(path=f\"../.zips/{DTE_fecha}/{DTE_name}/\")\n",
     "\n",
-    "                # os.mkdir(path=path)\n",
-    "                #z.extractall(path=path) #Extraer todos los archivos del primer .zip\n",
+    "\n",
+    "                # Ruta al archivo .zip\n",
+    "                segundo_zip_path = f\"../.zips/{DTE_fecha}/{DTE_name}/{DTE_name}\"\n",
+    "\n",
+    "                try:\n",
+    "                    # Verificar si el archivo .zip existe\n",
+    "                    if not os.path.exists(segundo_zip_path):\n",
+    "                        raise FileNotFoundError(f\"El archivo .zip '{segundo_zip_path}' no existe.\")\n",
+    "\n",
+    "                    # Abrir el archivo .zip\n",
+    "                    with zipfile.ZipFile(segundo_zip_path, 'r') as zip_ref:\n",
+    "                        # Listar todos los archivos en el archivo .zip\n",
+    "                        lista_archivos = zip_ref.namelist()\n",
+    "                        print(\"Archivos en el .zip:\")\n",
+    "                        for archivo in lista_archivos:\n",
+    "                            print(archivo)\n",
+    "                        \n",
+    "                        # Extraer todos los archivos a un directorio específico\n",
+    "                        ruta_extraccion = f\"../.zips/{DTE_fecha}/{DTE_fecha}\"\n",
+    "                        zip_ref.extractall(ruta_extraccion)\n",
+    "                        print(f\"Todos los archivos extraídos exitosamente en '{ruta_extraccion}'.\")\n",
+    "                        \n",
+    "\n",
+    "                except FileNotFoundError as fnf_error:\n",
+    "                    print(fnf_error)\n",
+    "                except zipfile.BadZipFile as bzf_error:\n",
+    "                    print(f\"Error con el archivo .zip: {bzf_error}\")\n",
+    "                except Exception as error:\n",
+    "                    print(f\"Error: {error}\")\n",
+    "\n",
     "        else:\n",
-    "\n",
     "            print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
-    "\n",
-    " \n",
     "\n",
     "except requests.exceptions.RequestException as e:\n",
     "    # Manejar la excepción\n",
-    "    print(\"Error al realizar la solicitud:\", e)"
+    "    print(\"Error al realizar la solicitud:\", e)\n",
+    "\n"
    ]
   }
  ],
@@ -137,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
