--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,25 @@
-testeando fecha ultimo dia del mes para los corregidos
+import requests
+
+url = 'https://api.example.com/data'
+params = {
+    'param1': 'value1',
+    'param2': 'value2'
+}
+headers = {
+    'Authorization': 'Bearer YOUR_ACCESS_TOKEN'
+}
+
+try:
+    response = requests.get(url, headers=headers, params=params)
+    response.raise_for_status()  # Levanta una excepción para códigos de estado 4xx/5xx
+except requests.exceptions.HTTPError as http_err:
+    print(f'HTTP error occurred: {http_err}')
+except Exception as err:
+    print(f'Other error occurred: {err}')
+else:
+    if response.status_code == 200:
+        data = response.json()
+        # Hacer algo con los datos
+        print(data)
+    else:
+        print(f'Error: {response.status_code}')
