--- a/test/dte_testing.ipynb
+++ b/test/dte_testing.ipynb
@@ -29,11 +29,6 @@
     "\n",
     "URL = f\"https://api.cammesa.com/pub-svc/public/\"\n",
     "\n",
-    "method_id = {\n",
-    "\n",
-    "    \"findDocumentosByNemoRango?\": \n",
-    "\n",
-    "}\n",
     "method_id = \"findDocumentosByNemoRango?\" #ID\n",
     "method_zip = \"findAllAttachmentZipByNemoId?\"\n",
     "\n",
@@ -52,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,18 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileExistsError",
-     "evalue": "[WinError 183] No se puede crear un archivo que ya existe: '../.zips/DTE2404/DTE2404.zip'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[25], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m os\u001b[38;5;241m.\u001b[39mmkdir(path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../.zips/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDTE_fecha\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     13\u001b[0m z\u001b[38;5;241m.\u001b[39mextractall(path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../.zips/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDTE_fecha\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDTE_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;66;03m#Extraer todos los archivos del primer .zip\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmkdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m../.zips/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mDTE_fecha\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mDTE_name\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m# Ruta al archivo .zip\u001b[39;00m\n\u001b[0;32m     19\u001b[0m segundo_zip_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../.zips/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDTE_fecha\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDTE_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[1;31mFileExistsError\u001b[0m: [WinError 183] No se puede crear un archivo que ya existe: '../.zips/DTE2404/DTE2404.zip'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: [Errno 13] Permission denied: '../.zips/DTE2404'\n"
      ]
     }
    ],
@@ -105,23 +96,22 @@
     "                files_inside = z.namelist()\n",
     "                DTE_name = z.namelist()[0]\n",
     "                DTE_fecha = z.namelist()[0][:7]\n",
-    "                                \n",
-    "                os.mkdir(path=f\"../.zips/{DTE_fecha}\")\n",
+    "\n",
+    "                path_dte = f\"../.zips/{DTE_fecha}\"                \n",
+    "                os.mkdir(path=path_dte)\n",
+    "                \n",
     "                z.extractall(path=f\"../.zips/{DTE_fecha}\") #Extraer todos los archivos del primer .zip\n",
     "\n",
-    "                os.mkdir(path=f\"../.zips/{DTE_fecha}/{DTE_name}/\")\n",
     "\n",
     "\n",
     "                # Ruta al archivo .zip\n",
-    "                segundo_zip_path = f\"../.zips/{DTE_fecha}/{DTE_name}/{DTE_name}\"\n",
-    "\n",
     "                try:\n",
     "                    # Verificar si el archivo .zip existe\n",
-    "                    if not os.path.exists(segundo_zip_path):\n",
-    "                        raise FileNotFoundError(f\"El archivo .zip '{segundo_zip_path}' no existe.\")\n",
+    "                    if not os.path.exists(path_dte):\n",
+    "                        raise FileNotFoundError(f\"El archivo .zip '{path_dte}' no existe.\")\n",
     "\n",
     "                    # Abrir el archivo .zip\n",
-    "                    with zipfile.ZipFile(segundo_zip_path, 'r') as zip_ref:\n",
+    "                    with zipfile.ZipFile(path_dte, 'r') as zip_ref:\n",
     "                        # Listar todos los archivos en el archivo .zip\n",
     "                        lista_archivos = zip_ref.namelist()\n",
     "                        print(\"Archivos en el .zip:\")\n",
@@ -129,9 +119,9 @@
     "                            print(archivo)\n",
     "                        \n",
     "                        # Extraer todos los archivos a un directorio específico\n",
-    "                        ruta_extraccion = f\"../.zips/{DTE_fecha}/{DTE_fecha}\"\n",
-    "                        zip_ref.extractall(ruta_extraccion)\n",
-    "                        print(f\"Todos los archivos extraídos exitosamente en '{ruta_extraccion}'.\")\n",
+    "                        \n",
+    "                        zip_ref.extractall(path_dte)\n",
+    "                        print(f\"Todos los archivos extraídos exitosamente en '{path_dte}'.\")\n",
     "                        \n",
     "\n",
     "                except FileNotFoundError as fnf_error:\n",
