descargando nemo DTE

--- a/test/dte_testing.ipynb
+++ b/test/dte_testing.ipynb
@@ -74,70 +74,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: [Errno 13] Permission denied: '../.zips/DTE2404'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    with requests.get(url_zip) as r:\n",
     "\n",
     "        if r.status_code == 200:\n",
     "            with zipfile.ZipFile(io.BytesIO(r.content)) as primer_zip:\n",
-    "                z = primer_zip\n",
     "                \n",
-    "                files_inside = z.namelist()\n",
-    "                DTE_name = z.namelist()[0]\n",
-    "                DTE_fecha = z.namelist()[0][:7]\n",
-    "\n",
-    "                path_dte = f\"../.zips/{DTE_fecha}\"                \n",
-    "                os.mkdir(path=path_dte)\n",
+    "                files_inside = primer_zip.namelist()\n",
+    "                DTE_name = primer_zip.namelist()[0]\n",
+    "                DTE_fecha = primer_zip.namelist()[0][:7]\n",
     "                \n",
-    "                z.extractall(path=f\"../.zips/{DTE_fecha}\") #Extraer todos los archivos del primer .zip\n",
+    "                path_dte = f\"../.zips/{DTE_fecha}\"   \n",
+    "                \n",
+    "                #primer_zip.extractall(path=f\"../.zips/{DTE_fecha}\") #Extraer todos los archivos del primer .zip\n",
+    "                primer_zip.extract(f\"{DTE_name}\", path= path_dte)\n",
     "\n",
+    "                with zipfile.ZipFile(f\"{path_dte}/{DTE_name}\", 'r') as segundo_zip:\n",
     "\n",
+    "                    DTE_mdb_name = f\"{DTE_fecha}.MDB\"\n",
     "\n",
-    "                # Ruta al archivo .zip\n",
-    "                try:\n",
-    "                    # Verificar si el archivo .zip existe\n",
-    "                    if not os.path.exists(path_dte):\n",
-    "                        raise FileNotFoundError(f\"El archivo .zip '{path_dte}' no existe.\")\n",
-    "\n",
-    "                    # Abrir el archivo .zip\n",
-    "                    with zipfile.ZipFile(path_dte, 'r') as zip_ref:\n",
-    "                        # Listar todos los archivos en el archivo .zip\n",
-    "                        lista_archivos = zip_ref.namelist()\n",
-    "                        print(\"Archivos en el .zip:\")\n",
-    "                        for archivo in lista_archivos:\n",
-    "                            print(archivo)\n",
-    "                        \n",
-    "                        # Extraer todos los archivos a un directorio específico\n",
-    "                        \n",
-    "                        zip_ref.extractall(path_dte)\n",
-    "                        print(f\"Todos los archivos extraídos exitosamente en '{path_dte}'.\")\n",
-    "                        \n",
-    "\n",
-    "                except FileNotFoundError as fnf_error:\n",
-    "                    print(fnf_error)\n",
-    "                except zipfile.BadZipFile as bzf_error:\n",
-    "                    print(f\"Error con el archivo .zip: {bzf_error}\")\n",
-    "                except Exception as error:\n",
-    "                    print(f\"Error: {error}\")\n",
-    "\n",
+    "                    segundo_zip.extract(f\"{DTE_mdb_name}\", path=path_dte)\n",
+    "                \n",
     "        else:\n",
     "            print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
     "\n",
     "except requests.exceptions.RequestException as e:\n",
     "    # Manejar la excepción\n",
-    "    print(\"Error al realizar la solicitud:\", e)\n",
-    "\n"
+    "    print(\"Error al realizar la solicitud:\", e)"
    ]
   }
  ],
@@ -157,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
