DTE testeado y subido a SQL

--- a/test/dte_testing.ipynb
+++ b/test/dte_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,16 +29,23 @@
     "\n",
     "URL = f\"https://api.cammesa.com/pub-svc/public/\"\n",
     "\n",
+    "server = 'DARCCVWSQL19'\n",
+    "database = 'TAPI'\n",
+    "\n",
+    "tabla_Q_Reporte = 'Q_Reporte_NO_Corregidos'\n",
+    "\n",
     "method_id = \"findDocumentosByNemoRango?\" #ID\n",
     "method_zip = \"findAllAttachmentZipByNemoId?\"\n",
     "\n",
     "fecha_desde = \"2024-03-31T00:00:00.000-03:00\"\n",
-    "fecha_hasta = \"2024-04-30T23:59:59.000-03:00\""
+    "fecha_hasta = \"2024-04-30T23:59:59.000-03:00\"\n",
+    "\n",
+    "connection_string = f'DRIVER=ODBC Driver 17 for SQL Server;SERVER={server};DATABASE={database};Trusted_Connection=yes;'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,30 +81,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DTE2404\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
+    "\n",
+    "\n",
     "try:\n",
     "    with requests.get(url_zip) as r:\n",
     "\n",
-    "        if r.status_code == 200:\n",
-    "            with zipfile.ZipFile(io.BytesIO(r.content)) as primer_zip:\n",
+    "        if r.status_code == 200: #response 200\n",
+    "            with zipfile.ZipFile(io.BytesIO(r.content)) as primer_zip: #trabaja el primer script\n",
     "                \n",
-    "                files_inside = primer_zip.namelist()\n",
+    "                files_inside = primer_zip.namelist() #listas archivos del primer zip\n",
     "                DTE_name = primer_zip.namelist()[0]\n",
     "                DTE_fecha = primer_zip.namelist()[0][:7]\n",
     "                \n",
+    "                print(DTE_fecha)\n",
+    "\n",
     "                path_dte = f\"../.zips/{DTE_fecha}\"   \n",
     "                \n",
-    "                #primer_zip.extractall(path=f\"../.zips/{DTE_fecha}\") #Extraer todos los archivos del primer .zip\n",
     "                primer_zip.extract(f\"{DTE_name}\", path= path_dte)\n",
     "\n",
-    "                with zipfile.ZipFile(f\"{path_dte}/{DTE_name}\", 'r') as segundo_zip:\n",
+    "                with zipfile.ZipFile(f\"{path_dte}/{DTE_name}\", 'r') as segundo_zip: #trabaja el segundo script\n",
     "\n",
-    "                    DTE_mdb_name = f\"{DTE_fecha}.MDB\"\n",
-    "\n",
+    "                    DTE_mdb_name = f\"{DTE_fecha}.MDB\"         \n",
+    "                    \n",
     "                    segundo_zip.extract(f\"{DTE_mdb_name}\", path=path_dte)\n",
+    "\n",
+    "                    mdb_file = os.path.join(path_dte, DTE_mdb_name)\n",
+    "                    conn_str = f\"Driver={{Microsoft Access Driver (*.mdb, *.accdb)}};DBQ={mdb_file};\"\n",
+    "\n",
+    "                    conn = pyodbc.connect(conn_str)\n",
+    "\n",
+    "                    Q_REPORTE = pd.read_sql(\"SELECT * FROM Q_Reporte\", conn)\n",
+    "                    \n",
+    "                    conn.close()\n",
+    "\n",
+    "                    quoted = urllib.parse.quote_plus(connection_string)\n",
+    "\n",
+    "                    engine = sqlalchemy.create_engine('mssql+pyodbc:///?odbc_connect={}'.format(quoted))\n",
+    "\n",
+    "                    df_Q_Reporte = Q_REPORTE.to_sql(f'{tabla_Q_Reporte}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                    \n",
     "                \n",
     "        else:\n",
     "            print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
@@ -106,6 +141,13 @@
     "    # Manejar la excepción\n",
     "    print(\"Error al realizar la solicitud:\", e)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
