--- a/test/dte_testing.ipynb
+++ b/test/dte_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "from dateutil.relativedelta import relativedelta\n",
+    "\n",
+    "def iterar_entre_meses(fecha_desde, fecha_hasta):\n",
+    "    fecha_actual = datetime.strptime(fecha_desde, \"%Y-%m-%dT%H:%M:%S.%f%z\")\n",
+    "    fecha_fin = datetime.strptime(fecha_hasta, \"%Y-%m-%dT%H:%M:%S.%f%z\")\n",
+    "    \n",
+    "    while fecha_actual < fecha_fin:\n",
+    "        # Primer día del mes actual\n",
+    "        primer_dia_mes = fecha_actual.replace(day=1)\n",
+    "        # Último día del mes actual\n",
+    "        if fecha_actual.month == 12:\n",
+    "            ultimo_dia_mes = fecha_actual.replace(day=31)\n",
+    "        else:\n",
+    "            primer_dia_siguiente_mes = fecha_actual.replace(day=1) + relativedelta(months=1)\n",
+    "            ultimo_dia_mes = primer_dia_siguiente_mes - timedelta(days=1)\n",
+    "        \n",
+    "        yield primer_dia_mes, ultimo_dia_mes\n",
+    "        \n",
+    "        # Avanza al siguiente mes\n",
+    "        fecha_actual = fecha_actual + relativedelta(months=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +62,60 @@
     "database = 'TAPI'\n",
     "\n",
     "tabla_Q_Reporte = 'Q_Reporte_NO_Corregidos'\n",
+    "tabla_GenTER = 'GenTer_NO_Corregidos'\n",
+    "tabla_GenHID = 'GenHID_NO_Corregidos'\n",
+    "tabla_GenMATER = 'GenMATER_NO_Corregidos'\n",
+    "tabla_GenBOM = 'GenBOM_NO_Corregidos'\n",
     "\n",
     "method_id = \"findDocumentosByNemoRango?\" #ID\n",
     "method_zip = \"findAllAttachmentZipByNemoId?\"\n",
     "\n",
-    "fecha_desde = \"2024-03-31T00:00:00.000-03:00\"\n",
-    "fecha_hasta = \"2024-04-30T23:59:59.000-03:00\"\n",
+    "fecha_desde = \"2023-01-01T00:00:00.000-03:00\"\n",
+    "fecha_hasta = \"2023-12-31T23:59:59.000-03:00\"\n",
     "\n",
     "connection_string = f'DRIVER=ODBC Driver 17 for SQL Server;SERVER={server};DATABASE={database};Trusted_Connection=yes;'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Primer día del mes: 2023-01-01 00:00:00-03:00\n",
+      "Último día del mes: 2023-01-31 00:00:00-03:00\n",
+      "Primer día del mes: 2023-02-01 00:00:00-03:00\n",
+      "Último día del mes: 2023-02-28 00:00:00-03:00\n",
+      "Primer día del mes: 2023-03-01 00:00:00-03:00\n",
+      "Último día del mes: 2023-03-31 00:00:00-03:00\n",
+      "Primer día del mes: 2023-04-01 00:00:00-03:00\n",
+      "Último día del mes: 2023-04-30 00:00:00-03:00\n",
+      "Primer día del mes: 2023-05-01 00:00:00-03:00\n",
+      "Último día del mes: 2023-05-31 00:00:00-03:00\n",
+      "Primer día del mes: 2023-06-01 00:00:00-03:00\n",
+      "Último día del mes: 2023-06-30 00:00:00-03:00\n",
+      "Primer día del mes: 2023-07-01 00:00:00-03:00\n",
+      "Último día del mes: 2023-07-31 00:00:00-03:00\n",
+      "Primer día del mes: 2023-08-01 00:00:00-03:00\n",
+      "Último día del mes: 2023-08-31 00:00:00-03:00\n",
+      "Primer día del mes: 2023-09-01 00:00:00-03:00\n",
+      "Último día del mes: 2023-09-30 00:00:00-03:00\n",
+      "Primer día del mes: 2023-10-01 00:00:00-03:00\n",
+      "Último día del mes: 2023-10-31 00:00:00-03:00\n",
+      "Primer día del mes: 2023-11-01 00:00:00-03:00\n",
+      "Último día del mes: 2023-11-30 00:00:00-03:00\n",
+      "Primer día del mes: 2023-12-01 00:00:00-03:00\n",
+      "Último día del mes: 2023-12-31 00:00:00-03:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "for fecha_actual, fecha_siguiente in iterar_entre_meses(fecha_desde,fecha_hasta):\n",
+    "    print(\"Primer día del mes:\", fecha_actual)\n",
+    "    print(\"Último día del mes:\", fecha_siguiente)"
    ]
   },
   {
@@ -123,7 +198,11 @@
     "\n",
     "                    conn = pyodbc.connect(conn_str)\n",
     "\n",
-    "                    Q_REPORTE = pd.read_sql(\"SELECT * FROM Q_Reporte\", conn)\n",
+    "                    Q_Reporte = pd.read_sql(\"SELECT * FROM Q_Reporte\", conn)\n",
+    "                    GenMATER = pd.read_sql(\"SELECT * FROM GenMATER\", conn)\n",
+    "                    GenTER = pd.read_sql(\"SELECT * FROM GenTER\", conn)\n",
+    "                    GenHID = pd.read_sql(\"SELECT * FROM GenHID\", conn)\n",
+    "                    GenBOM = pd.read_sql(\"SELECT * FROM GenBOM\", conn)\n",
     "                    \n",
     "                    conn.close()\n",
     "\n",
@@ -131,7 +210,11 @@
     "\n",
     "                    engine = sqlalchemy.create_engine('mssql+pyodbc:///?odbc_connect={}'.format(quoted))\n",
     "\n",
-    "                    df_Q_Reporte = Q_REPORTE.to_sql(f'{tabla_Q_Reporte}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                    df_Q_Reporte = Q_Reporte.to_sql(f'{tabla_Q_Reporte}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                    df_GenMATER = GenMATER.to_sql(f'{tabla_GenMATER}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                    df_GenTER = GenTER.to_sql(f'{tabla_GenTER}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                    df_GenHID = GenHID.to_sql(f'{tabla_GenHID}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                    df_GenBOM = GenBOM.to_sql(f'{tabla_GenBOM}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "                    \n",
     "                \n",
     "        else:\n",
