--- a/test/dte_testing.ipynb
+++ b/test/dte_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,7 @@
     "import requests\n",
     "import io\n",
     "from datetime import datetime, timedelta\n",
+    "from dateutil.relativedelta import relativedelta\n",
     "import sqlalchemy\n",
     "import urllib\n",
     "import warnings\n",
@@ -21,13 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime, timedelta\n",
-    "from dateutil.relativedelta import relativedelta\n",
-    "\n",
     "def iterar_entre_meses(fecha_desde, fecha_hasta):\n",
     "    fecha_actual = datetime.strptime(fecha_desde, \"%Y-%m-%dT%H:%M:%S.%f%z\")\n",
     "    fecha_fin = datetime.strptime(fecha_hasta, \"%Y-%m-%dT%H:%M:%S.%f%z\")\n",
@@ -45,12 +43,12 @@
     "        yield primer_dia_mes, ultimo_dia_mes\n",
     "        \n",
     "        # Avanza al siguiente mes\n",
-    "        fecha_actual = fecha_actual + relativedelta(months=1)\n"
+    "        fecha_actual = fecha_actual + relativedelta(months=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +69,14 @@
     "method_zip = \"findAllAttachmentZipByNemoId?\"\n",
     "\n",
     "fecha_desde = \"2023-01-01T00:00:00.000-03:00\"\n",
-    "fecha_hasta = \"2023-12-31T23:59:59.000-03:00\"\n",
+    "fecha_hasta = \"2023-01-31T23:59:59.000-03:00\"\n",
     "\n",
     "connection_string = f'DRIVER=ODBC Driver 17 for SQL Server;SERVER={server};DATABASE={database};Trusted_Connection=yes;'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -86,29 +84,7 @@
      "output_type": "stream",
      "text": [
       "Primer día del mes: 2023-01-01 00:00:00-03:00\n",
-      "Último día del mes: 2023-01-31 00:00:00-03:00\n",
-      "Primer día del mes: 2023-02-01 00:00:00-03:00\n",
-      "Último día del mes: 2023-02-28 00:00:00-03:00\n",
-      "Primer día del mes: 2023-03-01 00:00:00-03:00\n",
-      "Último día del mes: 2023-03-31 00:00:00-03:00\n",
-      "Primer día del mes: 2023-04-01 00:00:00-03:00\n",
-      "Último día del mes: 2023-04-30 00:00:00-03:00\n",
-      "Primer día del mes: 2023-05-01 00:00:00-03:00\n",
-      "Último día del mes: 2023-05-31 00:00:00-03:00\n",
-      "Primer día del mes: 2023-06-01 00:00:00-03:00\n",
-      "Último día del mes: 2023-06-30 00:00:00-03:00\n",
-      "Primer día del mes: 2023-07-01 00:00:00-03:00\n",
-      "Último día del mes: 2023-07-31 00:00:00-03:00\n",
-      "Primer día del mes: 2023-08-01 00:00:00-03:00\n",
-      "Último día del mes: 2023-08-31 00:00:00-03:00\n",
-      "Primer día del mes: 2023-09-01 00:00:00-03:00\n",
-      "Último día del mes: 2023-09-30 00:00:00-03:00\n",
-      "Primer día del mes: 2023-10-01 00:00:00-03:00\n",
-      "Último día del mes: 2023-10-31 00:00:00-03:00\n",
-      "Primer día del mes: 2023-11-01 00:00:00-03:00\n",
-      "Último día del mes: 2023-11-30 00:00:00-03:00\n",
-      "Primer día del mes: 2023-12-01 00:00:00-03:00\n",
-      "Último día del mes: 2023-12-31 00:00:00-03:00\n"
+      "Último día del mes: 2023-01-31 00:00:00-03:00\n"
      ]
     }
    ],
@@ -120,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,15 +105,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D65BDF1E77043FC803258967006A608E\n",
+      "A9B228A1A0B9894A03258951005F4ABA\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    with requests.get(url_doc_id) as response:\n",
     "        if response.status_code == 200:\n",
-    "            PPO=response.json()\n",
-    "            doc_id = PPO[-1]['id']\n",
+    "            DTE=response.json()\n",
+    "            doc_id_menos_1 = DTE[-1]['id']\n",
+    "            doc_id_mas_1 = DTE[0]['id']\n",
+    "            print(doc_id_menos_1)\n",
+    "            print(doc_id_mas_1)\n",
+    "            \n",
+    "\n",
     "        else:\n",
     "            print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
     "except requests.exceptions.RequestException as e:\n",
