--- a/test/dte_testing.ipynb
+++ b/test/dte_testing.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,11 +59,17 @@
     "server = 'DARCCVWSQL19'\n",
     "database = 'TAPI'\n",
     "\n",
-    "tabla_Q_Reporte = 'Q_Reporte_NO_Corregidos'\n",
-    "tabla_GenTER = 'GenTer_NO_Corregidos'\n",
-    "tabla_GenHID = 'GenHID_NO_Corregidos'\n",
-    "tabla_GenMATER = 'GenMATER_NO_Corregidos'\n",
-    "tabla_GenBOM = 'GenBOM_NO_Corregidos'\n",
+    "tabla_Q_Reporte_NO_Corregidos = 'Q_Reporte_NO_Corregidos'\n",
+    "tabla_GenTER_NO_Corregidos = 'GenTer_NO_Corregidos'\n",
+    "tabla_GenHID_NO_Corregidos = 'GenHID_NO_Corregidos'\n",
+    "tabla_GenMATER_NO_Corregidos = 'GenMATER_NO_Corregidos'\n",
+    "tabla_GenBOM_NO_Corregidos = 'GenBOM_NO_Corregidos'\n",
+    "\n",
+    "tabla_Q_Reporte_Corregidos = 'Q_Reporte_Corregidos'\n",
+    "tabla_GenTER_Corregidos = 'GenTer_Corregidos'\n",
+    "tabla_GenHID_Corregidos = 'GenHID_Corregidos'\n",
+    "tabla_GenMATER_Corregidos = 'GenMATER_Corregidos'\n",
+    "tabla_GenBOM_Corregidos = 'GenBOM_Corregidos'\n",
     "\n",
     "method_id = \"findDocumentosByNemoRango?\" #ID\n",
     "method_zip = \"findAllAttachmentZipByNemoId?\"\n",
@@ -122,11 +128,7 @@
     "    with requests.get(url_doc_id) as response:\n",
     "        if response.status_code == 200:\n",
     "            DTE=response.json()\n",
-    "            doc_id_menos_1 = DTE[-1]['id']\n",
-    "            doc_id_mas_1 = DTE[0]['id']\n",
-    "            print(doc_id_menos_1)\n",
-    "            print(doc_id_mas_1)\n",
-    "            \n",
+    "            doc_id = DTE[-1]['id']\n",
     "\n",
     "        else:\n",
     "            print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
