acomodando para descarga historica DTE

--- a/test/dte_testing.ipynb
+++ b/test/dte_testing.ipynb
@@ -160,9 +160,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "try:\n",
     "    with requests.get(url_zip) as r:\n",
     "\n",
@@ -202,11 +199,11 @@
     "\n",
     "                    engine = sqlalchemy.create_engine('mssql+pyodbc:///?odbc_connect={}'.format(quoted))\n",
     "\n",
-    "                    df_Q_Reporte = Q_Reporte.to_sql(f'{tabla_Q_Reporte}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
-    "                    df_GenMATER = GenMATER.to_sql(f'{tabla_GenMATER}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
-    "                    df_GenTER = GenTER.to_sql(f'{tabla_GenTER}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
-    "                    df_GenHID = GenHID.to_sql(f'{tabla_GenHID}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
-    "                    df_GenBOM = GenBOM.to_sql(f'{tabla_GenBOM}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                    df_Q_Reporte = Q_Reporte.to_sql(f'{tabla_Q_Reporte_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                    df_GenMATER = GenMATER.to_sql(f'{tabla_GenMATER_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                    df_GenTER = GenTER.to_sql(f'{tabla_GenTER_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                    df_GenHID = GenHID.to_sql(f'{tabla_GenHID_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                    df_GenBOM = GenBOM.to_sql(f'{tabla_GenBOM_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "                    \n",
     "                \n",
     "        else:\n",
