ultimando historico DTE

--- a/test/dte_testing.ipynb
+++ b/test/dte_testing.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
     "method_zip = \"findAllAttachmentZipByNemoId?\"\n",
     "\n",
     "fecha_desde = \"2023-01-01T00:00:00.000-03:00\"\n",
-    "fecha_hasta = \"2023-01-31T23:59:59.000-03:00\"\n",
+    "fecha_hasta = \"2023-03-31T23:59:59.000-03:00\"\n",
     "\n",
     "connection_string = f'DRIVER=ODBC Driver 17 for SQL Server;SERVER={server};DATABASE={database};Trusted_Connection=yes;'"
    ]
@@ -90,7 +90,11 @@
      "output_type": "stream",
      "text": [
       "Primer día del mes: 2023-01-01 00:00:00-03:00\n",
-      "Último día del mes: 2023-01-31 00:00:00-03:00\n"
+      "Último día del mes: 2023-01-31 00:00:00-03:00\n",
+      "Primer día del mes: 2023-02-01 00:00:00-03:00\n",
+      "Último día del mes: 2023-02-28 00:00:00-03:00\n",
+      "Primer día del mes: 2023-03-01 00:00:00-03:00\n",
+      "Último día del mes: 2023-03-31 00:00:00-03:00\n"
      ]
     }
    ],
@@ -111,24 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D65BDF1E77043FC803258967006A608E\n",
-      "A9B228A1A0B9894A03258951005F4ABA\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    with requests.get(url_doc_id) as response:\n",
     "        if response.status_code == 200:\n",
     "            DTE=response.json()\n",
     "            doc_id = DTE[-1]['id']\n",
+    "            print()\n",
     "\n",
     "        else:\n",
     "            print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
@@ -139,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
