--- a/test/dte_testing.ipynb
+++ b/test/dte_testing.ipynb
@@ -76,6 +76,8 @@
     "\n",
     "fecha_desde = \"2023-01-01T00:00:00.000-03:00\"\n",
     "fecha_hasta = \"2023-03-31T23:59:59.000-03:00\"\n",
+    "fecha_desde_obj = 0\n",
+    "fecha_hasta_obj = 1\n",
     "\n",
     "connection_string = f'DRIVER=ODBC Driver 17 for SQL Server;SERVER={server};DATABASE={database};Trusted_Connection=yes;'"
    ]
@@ -99,9 +101,83 @@
     }
    ],
    "source": [
-    "for fecha_actual, fecha_siguiente in iterar_entre_meses(fecha_desde,fecha_hasta):\n",
-    "    print(\"Primer día del mes:\", fecha_actual)\n",
-    "    print(\"Último día del mes:\", fecha_siguiente)"
+    "def DTE_NO_corregidos():\n",
+    "\n",
+    "    if fecha_desde_obj < fecha_hasta_obj:\n",
+    "        print(\"Se realiza el update DTE_NO_Corregidos\")\n",
+    "        \n",
+    "        for fecha_actual, fecha_siguiente in iterar_entre_meses(fecha_desde,fecha_hasta):\n",
+    "\n",
+    "\n",
+    "            url_doc_id = f\"{URL}{method_id}fechadesde={fecha_desde}&fechahasta={fecha_hasta}&nemo={NEMO}\"\n",
+    "\n",
+    "            try:\n",
+    "                with requests.get(url_doc_id) as response:\n",
+    "                    if response.status_code == 200:\n",
+    "                        DTE=response.json()\n",
+    "                        doc_id = DTE[-1]['id']\n",
+    "\n",
+    "                    else:\n",
+    "                        print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
+    "            except requests.exceptions.RequestException as e:\n",
+    "                # Manejar la excepción\n",
+    "                print(\"Error al realizar la solicitud:\", e)\n",
+    "            \n",
+    "            url_zip = f\"{URL}{method_zip}docId={doc_id}&nemo={NEMO}\"\n",
+    "\n",
+    "            try:\n",
+    "                with requests.get(url_zip) as r:\n",
+    "\n",
+    "                    if r.status_code == 200: #response 200\n",
+    "                        with zipfile.ZipFile(io.BytesIO(r.content)) as primer_zip: #trabaja el primer script\n",
+    "                            \n",
+    "                            files_inside = primer_zip.namelist() #listas archivos del primer zip\n",
+    "                            DTE_name = primer_zip.namelist()[0]\n",
+    "                            DTE_fecha = primer_zip.namelist()[0][:7]\n",
+    "                            \n",
+    "                            print(DTE_fecha)\n",
+    "\n",
+    "                            path_dte = f\"../.zips/{DTE_fecha}\"   \n",
+    "                            \n",
+    "                            primer_zip.extract(f\"{DTE_name}\", path= path_dte)\n",
+    "\n",
+    "                            with zipfile.ZipFile(f\"{path_dte}/{DTE_name}\", 'r') as segundo_zip: #trabaja el segundo script\n",
+    "\n",
+    "                                DTE_mdb_name = f\"{DTE_fecha}.MDB\"         \n",
+    "                                \n",
+    "                                segundo_zip.extract(f\"{DTE_mdb_name}\", path=path_dte)\n",
+    "\n",
+    "                                mdb_file = os.path.join(path_dte, DTE_mdb_name)\n",
+    "                                conn_str = f\"Driver={{Microsoft Access Driver (*.mdb, *.accdb)}};DBQ={mdb_file};\"\n",
+    "\n",
+    "                                conn = pyodbc.connect(conn_str)\n",
+    "\n",
+    "                                Q_Reporte = pd.read_sql(\"SELECT * FROM Q_Reporte\", conn)\n",
+    "                                GenMATER = pd.read_sql(\"SELECT * FROM GenMATER\", conn)\n",
+    "                                GenTER = pd.read_sql(\"SELECT * FROM GenTER\", conn)\n",
+    "                                GenHID = pd.read_sql(\"SELECT * FROM GenHID\", conn)\n",
+    "                                GenBOM = pd.read_sql(\"SELECT * FROM GenBOM\", conn)\n",
+    "                                \n",
+    "                                conn.close()\n",
+    "\n",
+    "                                quoted = urllib.parse.quote_plus(connection_string)\n",
+    "\n",
+    "                                engine = sqlalchemy.create_engine('mssql+pyodbc:///?odbc_connect={}'.format(quoted))\n",
+    "\n",
+    "                                df_Q_Reporte = Q_Reporte.to_sql(f'{tabla_Q_Reporte_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                df_GenMATER = GenMATER.to_sql(f'{tabla_GenMATER_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                df_GenTER = GenTER.to_sql(f'{tabla_GenTER_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                df_GenHID = GenHID.to_sql(f'{tabla_GenHID_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                df_GenBOM = GenBOM.to_sql(f'{tabla_GenBOM_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                \n",
+    "                            \n",
+    "                    else:\n",
+    "                        print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
+    "\n",
+    "            except requests.exceptions.RequestException as e:\n",
+    "                # Manejar la excepción\n",
+    "                print(\"Error al realizar la solicitud:\", e)\n",
+    "\n"
    ]
   },
   {
@@ -124,7 +200,6 @@
     "        if response.status_code == 200:\n",
     "            DTE=response.json()\n",
     "            doc_id = DTE[-1]['id']\n",
-    "            print()\n",
     "\n",
     "        else:\n",
     "            print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
