historico DTE Q_REPORTE cargado

--- a/test/dte_testing.ipynb
+++ b/test/dte_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-01-01 00:00:00-03:00\n",
+      "2023-01-31 00:00:00-03:00\n",
+      "01-2023\n"
+     ]
+    }
+   ],
+   "source": [
+    "for fecha_actual, fecha_siguiente in iterar_entre_meses(\"2023-01-01T00:00:00.000-03:00\", \"2023-01-31T00:00:00.000-03:00\"):\n",
+    "    print(fecha_actual)\n",
+    "    print(fecha_siguiente)\n",
+    "    mes_mdb = fecha_actual.strftime(\"%m-%Y\")\n",
+    "    print(mes_mdb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +97,8 @@
     "method_id = \"findDocumentosByNemoRango?\" #ID\n",
     "method_zip = \"findAllAttachmentZipByNemoId?\"\n",
     "\n",
-    "fecha_desde = \"2023-01-01T00:00:00.000-03:00\"\n",
-    "fecha_hasta = \"2023-03-31T23:59:59.000-03:00\"\n",
+    "fecha_desde = \"2024-01-01T00:00:00.000-03:00\"\n",
+    "fecha_hasta = \"2024-05-31T23:59:59.000-03:00\"\n",
     "fecha_desde_obj = 0\n",
     "fecha_hasta_obj = 1\n",
     "\n",
@@ -84,24 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Primer día del mes: 2023-01-01 00:00:00-03:00\n",
-      "Último día del mes: 2023-01-31 00:00:00-03:00\n",
-      "Primer día del mes: 2023-02-01 00:00:00-03:00\n",
-      "Último día del mes: 2023-02-28 00:00:00-03:00\n",
-      "Primer día del mes: 2023-03-01 00:00:00-03:00\n",
-      "Último día del mes: 2023-03-31 00:00:00-03:00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def DTE_NO_corregidos():\n",
+    "def DTE_corregidos():\n",
     "\n",
     "    if fecha_desde_obj < fecha_hasta_obj:\n",
     "        print(\"Se realiza el update DTE_NO_Corregidos\")\n",
@@ -109,7 +119,10 @@
     "        for fecha_actual, fecha_siguiente in iterar_entre_meses(fecha_desde,fecha_hasta):\n",
     "\n",
     "\n",
-    "            url_doc_id = f\"{URL}{method_id}fechadesde={fecha_desde}&fechahasta={fecha_hasta}&nemo={NEMO}\"\n",
+    "            url_doc_id = f\"{URL}{method_id}fechadesde={fecha_actual.isoformat()}&fechahasta={fecha_siguiente.isoformat()}&nemo={NEMO}\"\n",
+    "\n",
+    "            mes_mdb = fecha_actual.strftime(\"%m-%Y\")\n",
+    "            print(mes_mdb)\n",
     "\n",
     "            try:\n",
     "                with requests.get(url_doc_id) as response:\n",
@@ -135,7 +148,7 @@
     "                            DTE_name = primer_zip.namelist()[0]\n",
     "                            DTE_fecha = primer_zip.namelist()[0][:7]\n",
     "                            \n",
-    "                            print(DTE_fecha)\n",
+    "                            #print(DTE_fecha)\n",
     "\n",
     "                            path_dte = f\"../.zips/{DTE_fecha}\"   \n",
     "                            \n",
@@ -160,24 +173,70 @@
     "                                \n",
     "                                conn.close()\n",
     "\n",
+    "                                mes_datetime = datetime.strptime(mes_mdb, '%m-%Y')\n",
+    "                                mes_mdb_formated = mes_datetime.strftime('%Y-%m')\n",
+    "\n",
+    "                                Q_Reporte.insert(0, 'FECHA', mes_mdb_formated)\n",
+    "                                # GenMATER.insert(0, 'FECHA', mes_mdb_formated)\n",
+    "                                # GenTER.insert(0, 'FECHA', mes_mdb_formated)\n",
+    "                                # GenHID.insert(0, 'FECHA', mes_mdb_formated)\n",
+    "                                # GenBOM.insert(0, 'FECHA', mes_mdb_formated)\n",
+    "\n",
     "                                quoted = urllib.parse.quote_plus(connection_string)\n",
+    "\n",
+    "                                agentes = [\"CPBUENAG\", \"CTBARRAG\",\"CTGUEMEG\",\"CTGUEPLG\",\"CTLLATAG\",\"CTPBUEMG\",\"CTPIQUIG\",\"CTPPILAG\",\"ECOENERG\",\"GENELBAG\",\"GENELCCG\",\"GENELPLG\",\"HIDIAMAG\",\"HINIHUIG\",\"HREYESYG\",\"PAMPAENG\",\"PEPAMPAG\",\"PEVARAUG\",\"PPLEUFUG\"]\n",
+    "\n",
+    "                                \n",
+    "                                df_Q_Reporte = Q_Reporte[Q_Reporte[\"NEMO\"].isin(agentes)]\n",
+    "                                #df_GenMATER = GenMATER[GenMATER[\"AGENTE\"].isin(agentes)]\n",
+    "                                #df_GenTER = GenTER[GenTER[\"AGENTE\"].isin(agentes)]\n",
+    "                                #df_GenHID = GenHID[GenHID[\"AGENTE\"].isin(agentes)]\n",
+    "                                #df_GenBOM = GenBOM[GenBOM[\"AGENTE\"].isin(agentes)]\n",
+    "\n",
     "\n",
     "                                engine = sqlalchemy.create_engine('mssql+pyodbc:///?odbc_connect={}'.format(quoted))\n",
     "\n",
-    "                                df_Q_Reporte = Q_Reporte.to_sql(f'{tabla_Q_Reporte_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
-    "                                df_GenMATER = GenMATER.to_sql(f'{tabla_GenMATER_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
-    "                                df_GenTER = GenTER.to_sql(f'{tabla_GenTER_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
-    "                                df_GenHID = GenHID.to_sql(f'{tabla_GenHID_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
-    "                                df_GenBOM = GenBOM.to_sql(f'{tabla_GenBOM_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
-    "                                \n",
+    "\n",
+    "                                df_Q_Reporte.to_sql(f'{tabla_Q_Reporte_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                #df_GenMATER.to_sql(f'{tabla_GenMATER_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                #df_GenTER.to_sql(f'{tabla_GenTER_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                #df_GenHID.to_sql(f'{tabla_GenHID_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                #df_GenBOM.to_sql(f'{tabla_GenBOM_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                        \n",
+    "                                #Q_Reporte.to_sql(f'{tabla_Q_Reporte_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                #GenMATER.to_sql(f'{tabla_GenMATER_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                #GenTER.to_sql(f'{tabla_GenTER_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                #GenHID.to_sql(f'{tabla_GenHID_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                #GenBOM.to_sql(f'{tabla_GenBOM_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "                            \n",
     "                    else:\n",
     "                        print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
     "\n",
     "            except requests.exceptions.RequestException as e:\n",
     "                # Manejar la excepción\n",
-    "                print(\"Error al realizar la solicitud:\", e)\n",
-    "\n"
+    "                print(\"Error al realizar la solicitud:\", e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se realiza el update DTE_NO_Corregidos\n",
+      "01-2024\n",
+      "02-2024\n",
+      "03-2024\n",
+      "04-2024\n",
+      "05-2024\n"
+     ]
+    }
+   ],
+   "source": [
+    "DTE_corregidos()"
    ]
   },
   {
